SpMV benchmarks with ViennaCL

--- a/latex/all_usepackages.tex
+++ b/latex/all_usepackages.tex
@@ -55,4 +55,4 @@
 %\definecolor{myBGcolor}{HTML}{3E3535}
 %\definecolor{myTextcolor}{HTML}{CFECEC}
 %\color{myTextcolor}
-%\pagecolor{myBGcolor}
+\pagecolor{myBGcolor}
