--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -21,7 +21,7 @@
 \committeeperson{Mark Sussman}{University Representative}
 \committeeperson{Dennis Slice}{Committee Member}
 \committeeperson{Ming Ye}{Committee Member}
-\committeeperson{Janet Peterson}{Committe Member}
+\committeeperson{Janet Peterson}{Committee Member}
 
 \begin{document}
 
