--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -472,7 +472,7 @@ These benchmarks compare performance of a single SpMV executed on Spear. Each da
 \begin{subfigure}[t]{0.48\textwidth}
 \centering
 \includegraphics[width=1.0\textwidth]{../figures/spear_results/spmv/spmv_vcl_gflops-eps-converted-to.pdf}
-\caption{SpMV Performance of the ViennaCL CSR, COO and ELL formats versus the BOOST::uBLAS CSR format. }
+\caption{SpMV Performance of the ViennaCL CSR, COO and ELL formats versus the BOOST::uBLAS CSR format. \authnote{What $n$?}}
 \label{fig:spear_vcl_gflops}
 \end{subfigure} 
 \begin{subfigure}[t]{0.48\textwidth}
