New figure for distributed GPU

--- a/latex/performance_content/optimizations.tex
+++ b/latex/performance_content/optimizations.tex
@@ -197,6 +197,27 @@ These results were run on Spear. MPI communication is done with an MPI\_alltoall
 \end{subfigure} 
 \end{figure}
 
+\section{ViennaCL}
+
+These benchmarks compare performance of a single SpMV executed on Spear. Each data point is the average over 10 executions. The GPU is primed by an iteration before benchmarking begins. 
+
+\begin{figure}
+\centering
+\begin{subfigure}[t]{0.48\textwidth}
+\centering
+\includegraphics[width=1.0\textwidth]{../figures/spear_results/spmv/spmv_vcl_gflops-eps-converted-to.pdf}
+\caption{SpMV Performance of the ViennaCL CSR, COO and ELL formats versus the BOOST::uBLAS CSR format. \authnote{What $n$?}}
+\label{fig:spear_vcl_gflops}
+\end{subfigure} 
+\begin{subfigure}[t]{0.48\textwidth}
+\centering
+\includegraphics[width=1.0\textwidth]{../figures/spear_results/spmv/spmv_vcl_speedup-eps-converted-to.pdf}
+\caption{Speedup relative to the BOOST::uBLAS CSR implementation on the CPU.}
+\label{fig:spear_vcl_speedup}
+\end{subfigure} 
+\caption{Single GPU SpMV performance for ViennaCL vs BOOST::uBLAS on the Spear cluster (FSU). }
+\end{figure}
+
 
 
 
