--- a/latex/rbffd_avoid_pole_singularities.tex
+++ b/latex/rbffd_avoid_pole_singularities.tex
@@ -11,6 +11,8 @@
 %\fi
 
 \chapter{Avoiding Pole Singularities with RBF-FD}
+\label{app:rbffd_remove_singularities}
+
 This content follows \cite{FlyerWright07,FlyerWright09}. 
 
 %Within the test cases of this dissertation, we solve convective PDEs on the unit sphere with the form: 
